lamdas as parameters, frog iwen